<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="slaker.sydneyuni.au.com.slaker.activities.UserActivity">

    <Button
        android:id="@+id/buttonFirstPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startFirstPicture"
        android:hint="@string/buttonFirstPicture"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/numAggregates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginTop="200dp"
        android:hint="@string/numAggregates"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/projectName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:hint="@string/projectName"
        android:layout_below="@+id/numAggregates"
        android:layout_centerHorizontal="true"
        android:singleLine="true"/>

</RelativeLayout>
