<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="slaker.sydneyuni.au.com.slaker.activities.UserActivity">

    <Button
        android:id="@+id/nextInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextInstructions"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/goExperimentButton" />
    <Button
        android:id="@+id/goExperimentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goExperiment"
        android:onClick="startUserActivity"
        android:layout_above="@+id/nextInstructions"
        android:layout_alignParentEnd="true"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/buttonExample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exampleButton"
        android:onClick="startExampleInstructions"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/InstImage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/inst3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/InstDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_below="@+id/InstImage"
        android:layout_alignParentStart="true"
        android:autoLink="web"/>

</RelativeLayout>
